--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "jobs-calc",
   "version": "1.0.0",
   "description": "Freelance Calculator",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm ./src/server.js"
+    "start": "nodemon ."
   },
   "repository": {
     "type": "git",
@@ -19,6 +18,10 @@
   },
   "homepage": "https://github.com/onerbreno/jobs-calc#readme",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
